Fix mobile multiselect searchbar width  (#761)
On mobile our multiselect searchbar/options list is only 75% width. There was an invisible div that was missed in setting that width, so it extended out of the intended width and clicking in this area was focusing the search bar and opening the options dropdown.

--- a/client/src/styles/PortfolioFilters.scss
+++ b/client/src/styles/PortfolioFilters.scss
@@ -284,17 +284,17 @@
             @include for-phone-only {
               padding: 0;
 
-              .multiselect__input-container,
-              .multiselect__placeholder {
-                height: 5rem;
-                padding-left: 1.2rem;
+              .multiselect__menu,
+              .multiselect__control,
+              .multiselect__selected-value-control-container {
+                width: 75%;
               }
               .multiselect__input-container,
-              .multiselect__placeholder,
-              .multiselect__menu {
-                width: 75%;
+              .multiselect__placeholder {
                 font-size: 1.8rem;
                 line-height: 100%;
+                height: 5rem;
+                padding-left: 1.2rem;
               }
               .multiselect__menu {
                 font-size: 1.6rem;
